--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docx": "^8.5.0",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
+    "proxy-agent": "^6.4.0",
     "uuid": "^9.0.1"
   }
 }
