--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "form-data": "^4.0.0",
     "puppeteer-real-browser": "^1.2.18",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+	  "localtunnel": ""
   }
 }
